<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com</groupId>
	<artifactId>Practice</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>


		<dependencies>
			<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java8 -->
			<dependency>
				<groupId>io.cucumber</groupId>
				<artifactId>cucumber-java8</artifactId>
				<version>4.8.0</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-cucumber -->
			<dependency>
				<groupId>net.serenity-bdd</groupId>
				<artifactId>serenity-cucumber</artifactId>
				<version>1.9.45</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
			<dependency>
				<groupId>org.seleniumhq.selenium</groupId>
				<artifactId>selenium-java</artifactId>
				<version>4.0.0-alpha-3</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.2</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-library -->
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-library</artifactId>
				<version>2.2</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.testng/testng -->
			<dependency>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
				<version>6.14.3</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>4.1.1</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>4.1.1</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/com.codoid.products/fillo -->
			<dependency>
				<groupId>com.codoid.products</groupId>
				<artifactId>fillo</artifactId>
				<version>1.21</version>
			</dependency>

		</dependencies>

	<profiles>
		<profile>
			<id>single</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>

					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.22.2</version>
						<configuration>
						<testFailureIgnore>true</testFailureIgnore>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.22.2</version>
						<configuration>
							<argLine>-Xmx750m
								--illegal-access=permit</argLine>
							<suiteXmlFiles>
								<suiteXmlFile>testng.xml</suiteXmlFile>
							</suiteXmlFiles>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>